# jsonui-lsp

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  README.md  esbuild.ts  package.json  package.nls.json  package.nls.zh-cn.json  pnpm-lock.yaml  rust-toolchain  rustfmt.toml  webpack.config.js
.github/: ci.yml
.github/scripts/: build.js  moveRelease.js  package.js
.github/workflows/: ci.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/: extension.ts
crates/jsonui_lsp/: Cargo.toml
crates/jsonui_lsp/src/: complete_helper.rs  completer.rs  document.rs  file_queue.rs  lexer.rs  main.rs  parser.rs  stringpool.rs  utils.rs
crates/jsonui_lsp/src/generator/: mod.rs  unix_epoch.rs
crates/jsonui_lsp/src/museair/: mod.rs
crates/jsonui_lsp/src/resources/: jsonui_define.json  vanillapack_define_1.21.30.3.json  vanillapack_define_1.21.50.7.json  vanillapack_define_1.21.70.3.json  vanillapack_define_1.21.80.3.json
crates/jsonui_lsp/src/tree_ds/: mod.rs
crates/jsonui_lsp/src/tree_ds/node/: auto_id.rs  mod.rs
crates/jsonui_lsp/src/tree_ds/tree/: mod.rs
crates/jsonui_lsp/test/: achievement.json
crates/vanillapack_define_gen/src/: main.rs
resources/: vanillapack_define_1.21.40.3.json
src/: chumsky.rs  complete_helper.rs  completer.rs  completion.rs  completion_helper.rs  document.rs  lexer.rs  main.rs  parser.rs  path_info.rs  tokenizer.rs
src/generator/: unix_epoch.rs
src/tree_ds/: error.rs  mod.rs
src/tree_ds/node/: auto_id.rs  mod.rs
src/tree_ds/tree/: mod.rs
test/: achievement_screen.json  add_external_server.json  main_menu.json  manifest.json  server_form.json
vanillapack_define_gen/: Cargo.toml
vanillapack_define_gen/src/: main.rs
