[package]
name = "jsonui-lsp"
version = "0.0.1"
edition = "2021"
authors = ["CoolLoong"]
description = "A jsonui language server for vscode."
keywords = ["minecraft", "jsonui", "lsp", "vscode", "extension"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
log = "0.4"
flexi_logger = "0.29.2"
walkdir = "2.3"
museair = "0.2.0"
unicode-segmentation = "1.11.0"
dashmap = "6.1.0"
chumsky = "1.0.0-alpha.7"
tree-ds = { version = "0.1.5", features = ["auto_id"] }

[workspace]
members = ["vanillapack_define_gen"]

[profile.dev]
debug = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
lto = true
