[package]
name = "jsonui_lsp"
version = "0.0.1"
edition = "2021"
authors = ["CoolLoong"]
description = "A jsonui language server for vscode."
keywords = ["minecraft", "jsonui", "lsp", "vscode", "extension"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.41.1", features = ["macros", "io-std", "fs", "rt-multi-thread"] }
tower-lsp = "0.20.0"
log = "0.4"
flexi_logger = "0.29.6"
walkdir = "2.3"
museair = "0.2.0"
unicode-segmentation = "1.11.0"
dashmap = "6.1.0"
thiserror = "2.0.0"
lasso = { version = "0.7.3", features = ["ahasher"] }
parking_lot = "0.12.3"

[features]
debug-parse = []